CLC-3261: Show audio podcasts in class page - Fix spacing

--- a/app/assets/stylesheets/_academics.scss
+++ b/app/assets/stylesheets/_academics.scss
@@ -1,5 +1,8 @@
 .cc-page-academics {
   overflow: hidden;
+  .header-margin-top {
+    margin-top: 20px;
+  }
   h2, h3, h4 {
     color: $cc-color-medium-grey;
   }
@@ -7,13 +10,13 @@
     font-size: 16px;
     margin-bottom: 5px;
     &:not(:first-of-type) {
-      margin-top: 20px;
+      @extend .header-margin-top
     }
   }
   h4 {
     font-size: 14px;
     &:not(:first-of-type) {
-      margin-top: 20px;
+      @extend .header-margin-top
     }
   }
   .cc-academics-adviser-message {
